Websites/webkit.org/wp-content/themes/webkit/style.css
/* ... */
article .two-columns h2,
article .two-columns h3,
article .two-columns h4,
article .two-columns h5,
article .two-columns h6 {
    break-after: avoid-column; /* https://bugs.webkit.org/show_bug.cgi?id=148814 */
}

article .two-columns p {
    break-inside: avoid-column;
}

/** Post Layout **/

article .byline {
    float: left;
    width: 191px;
    text-align: right;
    padding-right: 4rem;
    box-sizing: border-box;
}

article .bodycopy {
    width: 66%;
    margin: 0 auto;
    position: relative;
}

article .aligncenter .wp-caption-text {
    right: -50%;
}

article .alignleft {
    float: left;
    margin: 1.5rem 1.5rem 1.5rem 0;
}

article .aligncenter {
    clear: both;
    display: block;
    margin: 0 auto 3rem;
}

article div.aligncenter {
    position: relative;
    float: right;
    right: 50%;
}

article div.aligncenter img {
    position: relative;
    right: -50%;
}

article .alignright {
    float: right;
    margin: 1.5rem 0 1.5rem 1.5rem;
}

article .alignnone {
    display: block;
    float: none;
}

article .alignnone.size-full {
    width: 100vw;
    height: auto;
    left: 50%;
    position: relative;
    -webkit-transform: translate(-50vw, 0);
    transform: translate(-50vw, 0);
}

article .abovetitle {
    margin-top: -0.4em;
}

article .pull-left {
    float: left;
    margin: 1.5rem 1.5rem 1.5rem -25%;
}

article .pull-right {
    float: right;
    margin: 1.5rem -25% 1.5rem 1.5rem;
}

article .cliptop {
    border-top: 1px solid #dddddd;
}

article .clipbottom {
    border-bottom: 1px solid #dddddd;
}

article .clipright {
    border-right: 1px solid #dddddd;
}

article .clipleft {
    border-left: 1px solid #dddddd;
}

article .mattewhite {
    background: white;
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
    padding-top: 3rem;
    padding-bottom: 3rem;
}

article .mattewhite:not(.widescreen) {
    border: 1px solid #e7e7e7;
    padding: 3rem;
    margin-left: -3rem;
    margin-right: -3rem;
}

article .mattewhite.tightwad {
    padding: 0;
}

/** Article Figures **/

article figure {
    margin-bottom: 3rem;
    text-align: center;
}
article figure > img {
    display: inline-block;
    max-width: 100%;
    max-height: 540px;
    height: auto;
}

figure.widescreen {
    position: relative;
    width: 100vw;
    left: 50%;
    transform: translate(-50%);
}

figure.widescreen img,
figure.widescreen figcaption {
    display: block;
    margin: 0 auto;
}

figure.widescreen figcaption {
    margin-top: 3rem;
}

figure.widescreen video {
    max-height: 420px;
    max-width: 66%;
}

article video.alignleft,
article video.alignright {
    max-width: 50%;
}

article .alignleft:first-child,
article .alignright:first-child {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}

article figcaption {
    text-align: left;
    margin-top: 1.5rem;
    max-width: 970px;
    padding-left: 1.5rem;
    box-sizing: border-box;
    font-size: 1.5rem;
    font-style: italic;
    color: #8E8E93;
    position: relative;
}

article figcaption::before {
    left: 1.5rem;
    width: 10%;
    height: 100%;
    bottom: 1rem;
    border-top: 1px solid #cccccc;
    content: '';
    opacity: 1;
    display: inline-block;
    box-sizing: border-box;
    position: absolute;
}

figure.aligncenter figcaption {
    text-align: center;
    padding-left: 0;
}

figure.aligncenter figcaption::before {
    margin: 0 auto;
    width: 20%;
    left: 50%;
    transform: translate(-50%);
}

article .clipbottom + p + figcaption {
    margin-top: 1rem;
}

article .clipbottom + p + figcaption::before {
    width: 0;
}

/** Page Layout **/
article.page h1 {
    text-align: left;
    width: 66%;
}

.page .bodycopy h1 {
    width: 100%;
}

/** Load Effects **/

@keyframes fade-in {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@-webkit-keyframes fade-in {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes fade-in-move-down {
    from {
        opacity: 0;
        -webkit-transform: translateY(-3rem);
        transform: translateY(-3rem)
    }

    to {
        opacity: 1;
        -webkit-transform: translateY(0);
        transform: translateY(0)
    }
}

@-webkit-keyframes fade-in-move-down {
    from {
        opacity: 0;
        -webkit-transform: translateY(-3rem);
        transform: translateY(-3rem)
    }

    to {
        opacity: 1;
        -webkit-transform: translateY(0);
        transform: translateY(0)
    }
}

article,
.feature-status-page {
    -webkit-animation: fade-in-move-down 0.7s;
    animation: fade-in-move-down 0.7s;
}

.tile {
    -webkit-animation: fade-in 0.4s;
    animation: fade-in 0.4s;
}

/** Page Table of Contents **/

.table-of-contents {
    float: right;
    box-sizing: border-box;
    padding: 3rem;
    margin: 0 0 3rem 3rem;

    width: 252px;
    background: #ffffff;
    z-index: 5;

}

.table-of-contents ul {
    margin: 0;
    list-style: none;
    font-size: 1.6rem;
    line-height: 2rem;
    padding-left: 2rem;
    padding-right: 0;
}

.table-of-contents .list > ul {
    padding-left: 0;
}

.table-of-contents ul li {
    margin-bottom: 1rem;
}

.table-of-contents ul li:last-child {
    margin-bottom: 0;
}

.table-of-contents ul li > ul {
    margin-top: 1rem;
}

.with-toc pre:nth-child(-n+6),
#post-4132 pre:nth-child(-n+10) {
    width: 55%;
    z-index: -1;
}

/** Logo **/
.site-logo {
    float: left;
    font-size: 4.2rem;
    line-height: 4.2rem;
    font-weight: 200;
    display: inline-block;
    background: url('images/webkit.svg') no-repeat;
    padding-left: 7rem;
    color: #333;
}

.site-logo .tagline {
    display: block;
    font-size: 1.8rem;
    line-height: 2rem;
    letter-spacing: -0.05rem;
    color: #666;
}

.hero .logo {
    background-image: url('images/webkit.svg');
}
/* ... */

