Images in WebKit.org blog article are stretched out https://bugs.webkit.org/show_bug.cgi?id=169208
Reviewed by Michael Catanzaro.

* wp-content/themes/webkit/style.css:
(article figure > img):


Canonical link: https://commits.webkit.org/187870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215462 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Websites/webkit.org/wp-content/themes/webkit/style.css
+++ b/Websites/webkit.org/wp-content/themes/webkit/style.css
@@ -1173,6 +1173,7 @@ article figure > img {
     max-width: 100%;
     max-height: 540px;
     height: auto;
+    width: auto;
 }
 
 figure.widescreen {
